syntax = "proto3";

package findMax;

option java_package  = "com.proto.findMax";
option java_multiple_files = true;

message InputNumbers{
    int32 inputNumbers = 1;
}
message Max{
    int32 max = 1;
}

service FindMaximum {
    rpc FindMax(stream InputNumbers) returns (stream Max) {};
}